# LABS-IOT

./: .gitignore
LAB 04/CLIENTE/main/: CMakeLists.txt  esp_ot_cli.c  valve_demo.c
LAB 04/RES/: CMakeLists.txt
LAB 04/RES/main/: coap_demo.c  esp_ot_cli.c  idf_component.yml
LAB_03/: .gitignore  .~lock.README.md#  partitions.csv
LAB_03/main/: CMakeLists.txt  coap_demo.c  esp_ot_cli.c
LAB_07/: .gitignore  CMakeLists.txt  DDR_Presentacion_Lab7_Lab8.md  README.md  SETUP_GUIDE.md  sdkconfig.defaults
LAB_07/GateWay/: README.md
LAB_07/GateWay/main/: coap_demo.c  sensor_node.c
LAB_07/Lab2/: sdkconfig.defaults
LAB_07/Lab2/main/: sensor_gateway_config.h
LAB_07/Nivel_Agua/: CMakeLists.txt  DDR_Laboratorio3.md  README.md  partitions.csv  sdkconfig.defaults
LAB_07/Nivel_Agua/main/: CMakeLists.txt  coap_demo.c  (+5 more)
LAB_07/Sensores/: README.md  sdkconfig.before_4mb_20260525_142841  sdkconfig.defaults
LAB_07/Sensores/main/: CMakeLists.txt  coap_demo.c  esp_ot_cli.c  idf_component.yml  sensor_gateway.c  sensor_node.c  sensor_profile.h  valve_demo.c
LAB_07/ftd_battery/: CMakeLists.txt  README.md  sdkconfig.defaults
LAB_07/main/: esp_ot_config.h  esp_ot_rcp.c
LAB_07/sample_project-main/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  simulador_coap.py
LAB_07/tools/: README.md  README_checks.md  coap_to_influx.py  otbr-agent-override.conf.example  otbr_resilience.sh  scada_bridge.env.example  test_lab7_lab8.py  test_scada_bridge.py  test_thread_dashboard_e2e.py  thread_to_scada_bridge.py
Lab_07/main/: esp_ot_cli.c  telemetry.c  telemetry.h
(+144 files in other folders)
